수정하는것!!!ㅎㅎㅎ

--- a/html/to.html
+++ b/html/to.html
@@ -151,6 +151,7 @@
 							<a href="#none">
 								<img src="http://static.naver.net/newsstand/2015/0907/WSJAsia/172453/010.jpg" alt="셀카찍는사람" />
 								<p>셀카 찍는 '몸매 종결' 미녀</p>
+								<p>수정후</p>
 							</a>
 						</li>
 					</ul>
