--- a/html/0907-news.html
+++ b/html/0907-news.html
@@ -122,12 +122,6 @@
 	</div><!--wrap[ex]-->
 	
 	
-	<div>
-		
-		testddddddddddddddd
-		fffffffffffffffffffffffffffffffffffffffff
-		
-		
-	</div>
+	sagddfsdf
 </body>
 </html>
